Fixed erroneous spacing on right side

--- a/css/chopstix.css
+++ b/css/chopstix.css
@@ -7,7 +7,6 @@ body {
   color: rgba(250, 250, 250, 1);
   font-family: 'Montserrat', sans-serif;
   width: 100%;
-  overflow-x: hidden;
 }
 a {
   text-decoration: none;
@@ -127,7 +126,6 @@ ul {
   font-size: 2rem;
   margin: 1rem 0;
   font-weight: bold;
-  width: 100%;
 }
 
 /*
